src/objects/Access_to_Libraries_on_Portal__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Control the access to the portal documents stored in Libraries</description>
    <fields>
        <fullName>Category_of_Account__c</fullName>
        <description>Access to Libraries based on Account Category</description>
        <inlineHelpText>Access to Libraries based on Account Category</inlineHelpText>
        <label>Category of Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Library_visibility__c</fullName>
        <description>The name of the libraries that should be visible</description>
        <label>Library visibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_of_Account__c</fullName>
        <description>Access to Libraries based on Account Record Type</description>
        <inlineHelpText>Access to Libraries based on Account Record Type</inlineHelpText>
        <label>Record Type of Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sector_of_Account__c</fullName>
        <description>Access to Libraries based on Account Sector</description>
        <inlineHelpText>Access to Libraries based on Account Sector</inlineHelpText>
        <label>Sector of Account</label>
        <type>TextArea</type>
    </fields>
    <label>Access to Libraries on Portal</label>
</CustomObject>